<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CalculoImcActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin.title.filtro">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/preto"
                    android:text="Cálculo de IMC"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/txtPeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="Peso:"
                    android:maxLength="3"
                    android:layout_marginTop="50dp"
                    android:inputType="numberDecimal"
                    android:digits="0123456789,"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPeso"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="kg" />

                <EditText
                    android:id="@+id/txtAltura"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="Altura:"
                    android:maxLength="3"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAltura"
                    android:layout_gravity="center"
                    android:text="cm" />

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/btn_primary_effect"
                    android:text="Calcular"
                    android:textColor="@drawable/text_color_primary_pressed"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

