<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GraficosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_buttons"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:paddingLeft="@dimen/margin.button.footer.filtro"
        android:paddingRight="@dimen/margin.button.footer.filtro"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btnPASePAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"

            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_primary_effect"
            android:text="PAS e PAD"
            android:textColor="@drawable/text_color_primary_pressed"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPAS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_primary_effect"
            android:text="PAS"
            android:textColor="@drawable/text_color_primary_pressed"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_primary_effect"
            android:text="PAD"
            android:textColor="@drawable/text_color_primary_pressed"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_graphPAS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_buttons"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/preto"
            android:textSize="20sp"
            android:text="Nível de Pressão Sistólica"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphPAS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_graphPAD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_buttons"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/preto"
            android:textSize="20sp"
            android:text="Nível de Pressão Diastólica"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphPAD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_graphPADePAD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_buttons"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/preto"
            android:textSize="20sp"
            android:text="Nível de Pressão Arterial"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphPASePAD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

</RelativeLayout>